# echofit

./: .gitignore  CONTRIBUTING.md  DESIGN.md  Makefile  README.md  gapp.yaml  mcp-app.yaml  pytest.ini  setup.py
cli/: pyproject.toml
cli/echofit_cli/: cloud.py  main.py
food_agent/: __init__.py
food_agent/mcp/: server.py
food_agent/sdk/: config.py  context.py  core.py
mcp/: pyproject.toml
mcp/echofit_mcp/: __init__.py  tools.py
mcp/echofit_mcp/diet/: tools.py
mcp/echofit_mcp/workout/: tools.py
schemas/: food-log.schema.json
sdk/: pyproject.toml
sdk/echofit/: __init__.py  app.yaml  config.py  context.py
sdk/echofit/diet/: __init__.py  core.py
sdk/echofit/workout/: __init__.py  core.py
tests/cloud/: test_admin_cloud_security.py  test_in_cloud.py
tests/framework/: conftest.py  test_framework.py
tests/integration/: test_echofit_mcp_serve.py  test_mcp_stdio.py
tests/unit/: test_date_and_logging.py
tests/unit/cli/: test_admin_cli_local.py  test_cloud_config.py
tests/unit/mcp/: test_diet_tools.py  test_http_transport.py  test_stdio_transport.py
tests/unit/sdk/: test_catalog.py  test_diet_core.py  test_user_data_paths.py  test_workout_core.py
