[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "echofit-mcp"
version = "0.1.0"
description = "EchoFit MCP server — AI tool interface for diet, workout, and health tracking"
requires-python = ">=3.10"
dependencies = [
    "echofit-sdk",
    "mcp-app @ git+https://github.com/krisrowe/mcp-app.git",
    "mcp[cli]",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[project.scripts]
echofit-mcp = "echofit_mcp:app.mcp_cli"
echofit-admin = "echofit_mcp:app.admin_cli"

[project.entry-points."mcp_app.apps"]
echofit = "echofit_mcp:app"

[tool.setuptools.packages.find]
include = ["echofit_mcp*"]
